--- a/output.css
+++ b/output.css
@@ -588,6 +588,22 @@ video {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -602,6 +618,18 @@ video {
 
 .col-span-8 {
   grid-column: span 8 / span 8;
+}
+
+.col-span-7 {
+  grid-column: span 7 / span 7;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
 }
 
 .col-start-2 {
@@ -681,6 +709,22 @@ video {
   margin-top: 5rem;
 }
 
+.mr-40 {
+  margin-right: 10rem;
+}
+
+.ml-40 {
+  margin-left: 10rem;
+}
+
+.ml-60 {
+  margin-left: 15rem;
+}
+
+.ml-72 {
+  margin-left: 18rem;
+}
+
 .flex {
   display: flex;
 }
@@ -737,6 +781,50 @@ video {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[2000px\] {
+  height: 2000px;
+}
+
+.h-\[1500px\] {
+  height: 1500px;
+}
+
+.h-\[1200px\] {
+  height: 1200px;
+}
+
+.h-\[1400px\] {
+  height: 1400px;
+}
+
+.h-\[1300px\] {
+  height: 1300px;
+}
+
+.h-\[1380px\] {
+  height: 1380px;
+}
+
+.h-\[1370px\] {
+  height: 1370px;
+}
+
+.h-\[1280px\] {
+  height: 1280px;
+}
+
+.h-\[1220px\] {
+  height: 1220px;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
@@ -748,6 +836,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .grid-flow-col {
@@ -798,6 +894,22 @@ video {
   gap: 8rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -824,6 +936,14 @@ video {
   align-self: center;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .bg-\[\#0c2340\] {
   --tw-bg-opacity: 1;
   background-color: rgb(12 35 64 / var(--tw-bg-opacity, 1));
@@ -838,12 +958,113 @@ video {
   background-color: ;
 }
 
+.bg-\[\#143865\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 56 101 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#25364b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 54 75 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#2872ce\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 114 206 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#518cd4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 140 212 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#081629\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 22 41 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[url\(\'\/img\/hero-pattern\.svg\'\)\] {
   background-image: url('/img/hero-pattern.svg');
 }
 
 .bg-\[url\(\'\/image\/campus_spring_scenic-1200\.webp\'\)\] {
   background-image: url('/image/campus_spring_scenic-1200.webp');
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\'https\:\/\/www\.nd\.edu\/assets\/css\/images\/pattern-knot\.svg\'\)\] {
+  background-image: url('https://www.nd.edu/assets/css/images/pattern-knot.svg');
+}
+
+.from-\[\#143865\] {
+  --tw-gradient-from: #143865 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/50 {
+  --tw-gradient-from: rgb(20 56 101 / 0.5) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/70 {
+  --tw-gradient-from: rgb(20 56 101 / 0.7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/90 {
+  --tw-gradient-from: rgb(20 56 101 / 0.9) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/10 {
+  --tw-gradient-from: rgb(20 56 101 / 0.1) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/5 {
+  --tw-gradient-from: rgb(20 56 101 / 0.05) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#143865\]\/20 {
+  --tw-gradient-from: rgb(20 56 101 / 0.2) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#081629\]\/20 {
+  --tw-gradient-from: rgb(8 22 41 / 0.2) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#081629\]\/50 {
+  --tw-gradient-from: rgb(8 22 41 / 0.5) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#081629\] {
+  --tw-gradient-from: #081629 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#143865\] {
+  --tw-gradient-to: #143865 var(--tw-gradient-to-position);
+}
+
+.to-\[\#081629\] {
+  --tw-gradient-to: #081629 var(--tw-gradient-to-position);
 }
 
 .bg-contain {
@@ -860,6 +1081,10 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .pb-10 {
@@ -914,6 +1139,14 @@ video {
   padding-top: 0.5rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -940,6 +1173,10 @@ video {
 
 .font-black {
   font-weight: 900;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .text-white {
