--- a/output.css
+++ b/output.css
@@ -604,72 +604,36 @@ video {
   z-index: 50;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .col-span-1 {
   grid-column: span 1 / span 1;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
 
-.col-span-8 {
-  grid-column: span 8 / span 8;
-}
-
-.col-span-7 {
-  grid-column: span 7 / span 7;
-}
-
-.col-span-5 {
-  grid-column: span 5 / span 5;
-}
-
 .col-span-6 {
   grid-column: span 6 / span 6;
+}
+
+.col-span-8 {
+  grid-column: span 8 / span 8;
 }
 
 .col-start-2 {
   grid-column-start: 2;
 }
 
-.col-end-4 {
-  grid-column-end: 4;
-}
-
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
 
-.row-start-2 {
-  grid-row-start: 2;
-}
-
-.row-start-3 {
-  grid-row-start: 3;
-}
-
-.row-start-5 {
-  grid-row-start: 5;
-}
-
-.row-start-9 {
-  grid-row-start: 9;
-}
-
 .row-start-4 {
   grid-row-start: 4;
-}
-
-.row-end-3 {
-  grid-row-end: 3;
-}
-
-.row-end-4 {
-  grid-row-end: 4;
 }
 
 .mx-auto {
@@ -677,52 +641,52 @@ video {
   margin-right: auto;
 }
 
-.mr-32 {
-  margin-right: 8rem;
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.ml-72 {
+  margin-left: 18rem;
 }
 
 .mr-20 {
   margin-right: 5rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
+.mt-64 {
+  margin-top: 16rem;
 }
 
-.mr-44 {
-  margin-right: 11rem;
+.mb-96 {
+  margin-bottom: 24rem;
 }
 
-.ml-44 {
-  margin-left: 11rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.mr-40 {
-  margin-right: 10rem;
+.mt-32 {
+  margin-top: 8rem;
 }
 
-.ml-40 {
-  margin-left: 10rem;
+.mr-32 {
+  margin-right: 8rem;
 }
 
-.ml-60 {
-  margin-left: 15rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.ml-72 {
-  margin-left: 18rem;
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .flex {
@@ -733,129 +697,52 @@ video {
   display: grid;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
-.h-32 {
-  height: 8rem;
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-28 {
   height: 7rem;
 }
 
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[199px\] {
-  height: 199px;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
 .h-\[100vh\] {
   height: 100vh;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[2000px\] {
-  height: 2000px;
-}
-
-.h-\[1500px\] {
-  height: 1500px;
-}
-
-.h-\[1200px\] {
-  height: 1200px;
-}
-
-.h-\[1400px\] {
-  height: 1400px;
-}
-
-.h-\[1300px\] {
-  height: 1300px;
-}
-
-.h-\[1380px\] {
-  height: 1380px;
-}
-
-.h-\[1370px\] {
-  height: 1370px;
-}
-
-.h-\[1280px\] {
-  height: 1280px;
 }
 
 .h-\[1220px\] {
   height: 1220px;
 }
 
-.min-h-fit {
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+.h-\[30vh\] {
+  height: 30vh;
 }
 
-.w-\[100vh\] {
-  width: 100vh;
+.h-full {
+  height: 100%;
 }
 
-.w-full {
-  width: 100%;
+.h-96 {
+  height: 24rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-40 {
   width: 10rem;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
+.w-full {
+  width: 100%;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.w-96 {
+  width: 24rem;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.w-\[200px\] {
+  width: 200px;
 }
 
 .grid-cols-12 {
@@ -866,66 +753,54 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .justify-end {
   justify-content: flex-end;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-20 {
-  gap: 5rem;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-32 {
   gap: 8rem;
 }
 
+.gap-\[-12\] {
+  gap: -12;
+}
+
+.gap-\[-12px\] {
+  gap: -12px;
+}
+
+.gap-\[-32px\] {
+  gap: -32px;
+}
+
 .gap-10 {
   gap: 2.5rem;
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
-}
-
-.gap-y-5 {
-  row-gap: 1.25rem;
 }
 
 .gap-y-10 {
   row-gap: 2.5rem;
 }
 
-.space-x-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-7 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.75rem * var(--tw-space-x-reverse));
   margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-end {
@@ -944,38 +819,9 @@ video {
   border-width: 1px;
 }
 
-.bg-\[\#0c2340\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(12 35 64 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#143865\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 56 101 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#25364b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 54 75 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#2872ce\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(40 114 206 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#518cd4\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(81 140 212 / var(--tw-bg-opacity, 1));
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#081629\] {
@@ -983,8 +829,23 @@ video {
   background-color: rgb(8 22 41 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[url\(\'\/img\/hero-pattern\.svg\'\)\] {
-  background-image: url('/img/hero-pattern.svg');
+.bg-\[\#d39f10\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 159 16 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[url\(\'\/image\/campus_spring_scenic-1200\.webp\'\)\] {
@@ -995,54 +856,8 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-\[url\(\'https\:\/\/www\.nd\.edu\/assets\/css\/images\/pattern-knot\.svg\'\)\] {
-  background-image: url('https://www.nd.edu/assets/css/images/pattern-knot.svg');
-}
-
-.from-\[\#143865\] {
-  --tw-gradient-from: #143865 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/50 {
-  --tw-gradient-from: rgb(20 56 101 / 0.5) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/70 {
-  --tw-gradient-from: rgb(20 56 101 / 0.7) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/90 {
-  --tw-gradient-from: rgb(20 56 101 / 0.9) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/10 {
-  --tw-gradient-from: rgb(20 56 101 / 0.1) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/5 {
-  --tw-gradient-from: rgb(20 56 101 / 0.05) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#143865\]\/20 {
-  --tw-gradient-from: rgb(20 56 101 / 0.2) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(20 56 101 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#081629\]\/20 {
-  --tw-gradient-from: rgb(8 22 41 / 0.2) var(--tw-gradient-from-position);
+.from-\[\#081629\] {
+  --tw-gradient-from: #081629 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -1051,16 +866,6 @@ video {
   --tw-gradient-from: rgb(8 22 41 / 0.5) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#081629\] {
-  --tw-gradient-from: #081629 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(8 22 41 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-\[\#143865\] {
-  --tw-gradient-to: #143865 var(--tw-gradient-to-position);
 }
 
 .to-\[\#081629\] {
@@ -1075,86 +880,64 @@ video {
   background-size: cover;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pt-40 {
-  padding-top: 10rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-28 {
-  padding-left: 7rem;
-}
-
 .pl-24 {
   padding-left: 6rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.pt-20 {
+  padding-top: 5rem;
 }
 
-.pb-7 {
-  padding-bottom: 1.75rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pr-16 {
+  padding-right: 4rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
 }
 
 .text-3xl {
@@ -1162,26 +945,37 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-black {
-  font-weight: 900;
-}
-
 .font-normal {
   font-weight: 400;
 }
 
-.text-white {
+.text-\[\#0c2340\] {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(12 35 64 / var(--tw-text-opacity, 1));
 }
 
 .text-black {
@@ -1189,7 +983,17 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#0c2340\] {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(12 35 64 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 768px) {
+  .md\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+
+  .md\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
 }
